# pas-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: builder.rs  lib.rs  macros.rs  shared_impl.rs  slice.rs  slice_mut.rs  slicer.rs
tests/: macro_tests.rs  shared.rs  shared_tests.rs  slice_mut.rs  slice_mut_tests.rs  slicer_tests.rs
