[package]
name = "pas"
version = "0.1.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["data", "slice"]
authors = ["David Peicho <david.peicho@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/DavidPeicho/pas-rs"
repository = "https://github.com/DavidPeicho/pas-rs"

[dependencies]
bytemuck = { version = "1.7.2" }

[dev-dependencies]
paste = "1.0.14"
bytemuck = { version = "1.7.2", features = ["derive"] }
